Enable WebContainer integration tests.