@@ -18,6 +18,7 @@
     <activemq.version>5.7.0</activemq.version>
     <abdera.version>1.1.3</abdera.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>javax.jms</groupId>
@@ -92,8 +93,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-spring</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey.jersey-test-framework</groupId>
+      <artifactId>jersey-test-framework-grizzly2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-grizzly2-servlet</artifactId>
+      <artifactId>jersey-servlet</artifactId>
+      <version>${jersey.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -180,6 +192,12 @@
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-http-api</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-kernel</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -189,6 +207,13 @@
       <artifactId>fcrepo-jms</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-http-commons</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <type>test-jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.xbean</groupId>
@@ -238,14 +263,8 @@
     </resources>
     <plugins>
       <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.11</version>
-        <configuration>
-          <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=256m</argLine>
-          <includes>
-            <include>**/*.java</include>
-          </includes>
-        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
